@@ -1,3 +1,8 @@
+Sun Mar  6 20:53:26 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/config-linux.h:
+          Removed some old checks.
+
 Sun Mar  6 13:50:09 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/config-openbsd.h:
